--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -2,39 +2,47 @@
 
     <div class="row">
 
-        <div class="col-md-12">
+        <!--
+         <a href="http://www.w3.org/html/logo/">
+            <img src="http://www.w3.org/html/logo/badge/html5-badge-h-solo.png" width="63" height="64" alt="HTML5 Powered" title="HTML5 Powered">
+        </a>
+        -->
 
-            <!--
-             <a href="http://www.w3.org/html/logo/">
-                <img src="http://www.w3.org/html/logo/badge/html5-badge-h-solo.png" width="63" height="64" alt="HTML5 Powered" title="HTML5 Powered">
-            </a>
-            -->
+        <!-- TODO add 'built with angular', 'built by me (link to management)' -->
 
-            <!-- TODO add 'built with angular', 'built by me (link to management)' -->
-
-            <!-- TODO duplicate this list at the top -->
-            <!-- NOTE: tab-indexes 61-80 are reserved for bottom navigation -->
-            <ul class="col-md-3 links-list">
+        <!-- TODO duplicate this list at the top -->
+        <!-- NOTE: tab-indexes 61-80 are reserved for bottom navigation -->
+        <nav class="col-md-3">
+            <ul class="links-list list-unstyled">
                 <li>
-                    <a tabindex="61" href="#news-and-events.html">News &amp; Events</a>
+                    <a tabindex="61" href="news-and-events.html">News &amp; Events</a>
                 </li>
                 <li>
-                    <a tabindex="62" href="#contact-us.html">Contact Us</a>
+                    <a tabindex="62" href="contact-us.html">Contact Us</a>
                 </li>
                 <li>
-                    <a tabindex="63" href="#job-opportunities.html">Job Opportunities</a>
+                    <a tabindex="63" href="job-opportunities.html">Job Opportunities</a>
                 </li>
                 <li>
-                    <a tabindex="64" href="#copyright-notice.html">Copyright Notice</a>
+                    <a tabindex="64" href="copyright-notice.html">Copyright Notice</a>
                 </li>
             </ul>
+        </nav>
 
-            <span class="col-md-3"></span>
+        <div class="col-md-3"></div>
 
-            <span class="col-md-3"></span>
+        <div class="col-md-3 text-center website-meta">
+            <p>
+                <img src="images/logos/technologies/angularjs.png" />
+                Powered by <a href="http://angularjs.org/">Angular JS</a>
+            </p>
+            <p>
+                Built by <a href="management.html#eliran-malka">Eliran Malka</a>
+            </p>
+        </div>
 
-            <span class="col-md-3 text-right">© 1 2 3 Completed 2013</span>
-
+        <div class="col-md-3">
+            <span class="copyright">© 1 2 3 Completed 2014</span>
         </div>
     </div>
 </div>
