--- a/app/views/header.html
+++ b/app/views/header.html
@@ -27,7 +27,7 @@
             <nav>
                 <ul class="list-inline pull-right">
                     <li>
-                        <a tabindex="11" href="services.html">Global Services</a>
+                        <a tabindex="11" href="global-services.html">Global Services</a>
                     </li>
                     <li>
                         <a tabindex="21" href="training.html">Training</a>
