--- a/app/views/partials/what-we-do.html
+++ b/app/views/partials/what-we-do.html
@@ -1,32 +1,32 @@
 <h1>What we do?</h1>
-<ul class="services-list">
+<ul class="services-list list-unstyled">
     <!-- NOTE: tab-indexes 81-90 are reserved for services links -->
     <li>
-        <a tabindex="81" href="#project-development.html">
+        <a tabindex="81" href="project-development.html">
             <span class="icon development"></span>
             <span class="title">Project Development</span>
         </a>
     </li>
     <li>
-        <a tabindex="82" href="#it-troubleshooting-and-consulting.html">
+        <a tabindex="82" href="it-troubleshooting-and-consulting.html">
             <span class="icon consulting"></span>
             <span class="title">IT Troubleshooting And Consulting</span>
         </a>
     </li>
     <li>
-        <a tabindex="83" href="#training.html">
+        <a tabindex="83" href="training.html">
             <span class="icon training"></span>
             <span class="title">Training</span>
         </a>
     </li>
     <li>
-        <a tabindex="84" href="#rnd-staff-augmentation.html">
+        <a tabindex="84" href="rnd-staff-augmentation.html">
             <span class="icon staff"></span>
             <span class="title">R&amp;D Staff Augmentation</span>
         </a>
     </li>
     <li>
-        <a tabindex="85" href="#professional-services-execution-arm.html">
+        <a tabindex="85" href="professional-services-execution-arm.html">
             <span class="icon pro-services"></span>
             <span class="title">Professional Services Execution Arm</span>
         </a>
