--- a/app/views/header.html
+++ b/app/views/header.html
@@ -7,9 +7,13 @@
 
     <div id="top-links" class="row">
         <nav class="col-md-12">
+            <!-- NOTE: tab-indexes 51-70 are reserved for low priority links -->
             <ul class="list-inline pull-right">
                 <li>
-                    <a tabindex="41" href="job-opportunities.html">Job Opportunities</a>
+                    <a tabindex="51" href="news-and-events.html">News &amp; Events</a>
+                </li>
+                <li>
+                    <a tabindex="52" href="job-opportunities.html">Job Opportunities</a>
                 </li>
             </ul>
         </nav>
@@ -23,20 +27,20 @@
             </a>
         </div>
         <div class="col-md-8">
-            <!-- NOTE: tab-indexes 11-50 are reserved for main navigation -->
+            <!-- NOTE: tab-indexes 11-30 are reserved for main navigation -->
             <nav>
                 <ul class="list-inline pull-right">
                     <li>
                         <a tabindex="11" href="global-services.html">Global Services</a>
                     </li>
                     <li>
-                        <a tabindex="21" href="training.html">Training</a>
+                        <a tabindex="12" href="training.html">Training</a>
                     </li>
                     <li>
-                        <a tabindex="31" href="business-relations.html">Business Relations</a>
+                        <a tabindex="13" href="business-relations.html">Business Relations</a>
                     </li>
                     <li>
-                        <a tabindex="41" href="contact-us.html">Contact</a>
+                        <a tabindex="14" href="contact-us.html">Contact</a>
                     </li>
                 </ul>
             </nav>
