--- a/app/views/partials/global-services.html
+++ b/app/views/partials/global-services.html
@@ -1,4 +1,14 @@
 <section>
+    <h1>Our Services</h1>
+
     <iframe src="https://mapsengine.google.com/map/embed?authuser=0&hl=en&mid=zr7uqtey-9M4.kCI272GC8gW4"
-            style="width: 100%; height: 400px; "></iframe>
+            class="services-map"></iframe>
+    <p>
+        1 2 3 Completed is known for its flexibility in leveraging the availability of its experts
+        according to the customer specific requirements. We have the ability to provide services either
+        offshore or onsite at customer's premises, all according to the customer availability and
+        financial preferences. 123 Completed leverages its R&amp;D Center to provide timely, cost effective
+        and high quality solutions, enabling customers to focus on their strategic business objectives.
+    </p>
+
 </section>
