--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -32,10 +32,10 @@
         <div class="col-md-3 text-center website-meta">
             <p>
                 <img src="images/logos/technologies/angularjs.png" />
-                Powered by <a href="http://angularjs.org/">Angular JS</a>
+                Built with <a href="http://angularjs.org/">Angular JS</a>
             </p>
             <p>
-                Built by <a href="management.html#eliran-malka">Eliran Malka</a>
+                Created by <a href="management.html#eliran-malka">Eliran Malka</a>
             </p>
         </div>
 
