--- a/app/views/header.html
+++ b/app/views/header.html
@@ -10,37 +10,40 @@
             <!-- NOTE: tab-indexes 51-70 are reserved for low priority links -->
             <ul class="list-inline pull-right">
                 <li>
-                    <a tabindex="51" href="news-and-events.html">News &amp; Events</a>
+                    <a tabindex="51" href="/page/news-and-events.html">News &amp; Events</a>
                 </li>
                 <li>
-                    <a tabindex="52" href="job-opportunities.html">Job Opportunities</a>
+                    <a tabindex="52" href="/page/job-opportunities.html">Job Opportunities</a>
                 </li>
             </ul>
         </nav>
     </div>
 
     <div id="header-nav" class="row">
-        <div class="col-md-4">
+        <div class="col-md-3">
             <a tabindex="6" href="/" class="logo">
                 <span class="one">123</span>
                 <span class="completed">completed</span>
             </a>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-9">
             <!-- NOTE: tab-indexes 11-30 are reserved for main navigation -->
             <nav>
                 <ul class="list-inline pull-right">
                     <li>
-                        <a tabindex="11" href="global-services.html">Global Services</a>
+                        <a tabindex="11" href="/page/management.html">About Us</a>
                     </li>
                     <li>
-                        <a tabindex="12" href="training.html">Training</a>
+                        <a tabindex="12" href="/page/global-services.html">Global Services</a>
                     </li>
                     <li>
-                        <a tabindex="13" href="business-relations.html">Business Relations</a>
+                        <a tabindex="13" href="/page/training.html">Training</a>
                     </li>
                     <li>
-                        <a tabindex="14" href="contact-us.html">Contact</a>
+                        <a tabindex="14" href="/page/business-relations.html">Business Relations</a>
+                    </li>
+                    <li>
+                        <a tabindex="15" href="/page/contact-us.html">Contact</a>
                     </li>
                 </ul>
             </nav>
