--- a/app/views/partials/global-services.html
+++ b/app/views/partials/global-services.html
@@ -1,8 +1,7 @@
 <section>
     <h1>Our Services</h1>
 
-    <iframe src="https://mapsengine.google.com/map/embed?authuser=0&hl=en&mid=zr7uqtey-9M4.kCI272GC8gW4"
-            class="services-map"></iframe>
+    <iframe class="services-map" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/ms?msa=0&amp;msid=201762555821246510096.0004e538a20e95f2b2269&amp;hl=en&amp;ie=UTF8&amp;ll=36.38711,8.745514&amp;spn=47.094341,261.892385&amp;t=m&amp;output=embed"></iframe><br /><small>View <a href="https://www.google.com/maps/ms?msa=0&amp;msid=201762555821246510096.0004e538a20e95f2b2269&amp;hl=en&amp;ie=UTF8&amp;ll=36.38711,8.745514&amp;spn=47.094341,261.892385&amp;t=m&amp;source=embed" style="color:#0000FF;text-align:left">1 2 3 Completed Global Services</a> in a larger map</small>
     <p>
         1 2 3 Completed is known for its flexibility in leveraging the availability of its experts
         according to the customer specific requirements. We have the ability to provide services either
