adding angular carousel for acknowledgments ticker, creating its directive and controller. playing with logos, adding assets folder. beginning separation of scss stylesheets per component. correcting images path in markup references. route for pages restored to only include the page name as param.

--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -13,16 +13,16 @@
         <nav class="col-md-3">
             <ul class="links-list list-unstyled">
                 <li>
-                    <a tabindex="31" href="news-and-events.html">News &amp; Events</a>
+                    <a tabindex="31" href="/page/news-and-events.html">News &amp; Events</a>
                 </li>
                 <li>
-                    <a tabindex="32" href="contact-us.html">Contact Us</a>
+                    <a tabindex="32" href="/contact-us.html">Contact Us</a>
                 </li>
                 <li>
-                    <a tabindex="33" href="job-opportunities.html">Job Opportunities</a>
+                    <a tabindex="33" href="/job-opportunities.html">Job Opportunities</a>
                 </li>
                 <li>
-                    <a tabindex="34" href="copyright-notice.html">Copyright Notice</a>
+                    <a tabindex="34" href="/copyright-notice.html">Copyright Notice</a>
                 </li>
             </ul>
         </nav>
@@ -31,11 +31,11 @@
 
         <div class="col-md-3 text-center website-meta">
             <p>
-                <img src="images/logos/technologies/angularjs.png" />
+                <img src="/images/logos/technologies/angularjs.png" />
                 Built with <a href="http://angularjs.org/">Angular JS</a>
             </p>
             <p>
-                Created by <a href="management.html#eliran-malka">Eliran Malka</a>
+                Crafted by <a href="/management.html#eliran-malka">Eliran Malka</a>
             </p>
         </div>
 
