--- a/app/views/home-template.html
+++ b/app/views/home-template.html
@@ -2,8 +2,8 @@
 
     <div class="row">
         <div class="col-md-8">
-            <section>
-                <!-- TODO insert ticker / slider -->
+            <section ng-controller="AcknowledgmentsCtrl">
+                <div acknowledgments></div>
             </section>
         </div>
         <div class="col-md-4">
