--- a/app/views/partials/staff.html
+++ b/app/views/partials/staff.html
@@ -1,9 +1,9 @@
-<section class="management">
+<section class="staff">
 
-    <h1>Management</h1>
+    <h1>The Staff</h1>
 
     <div class="member">
-        <img class="round-3" src="/123completed-website/WebContent/images/staff/eyal.png" alt="Eyal Rubin's Portrait" width="80" height="80" />
+        <img class="round-3" src="/images/staff/eyal.png" alt="Eyal Rubin's Portrait" width="80" height="80" />
         <h2>Eyal Rubin, Founder, CEO</h2>
         <p>
             Eyal Rubin has been the Founder and Chief Executive Officer of 1 2 3 Completed since January 2009.
@@ -31,7 +31,7 @@
     </div>
 
     <div class="member">
-        <img class="round-3" src="/123completed-website/WebContent/images/staff/alons.jpg" alt="Alon Strikovsky's Portrait" width="80" height="80" />
+        <img class="round-3" src="/images/staff/alons.jpg" alt="Alon Strikovsky's Portrait" width="80" height="80" />
         <h2>Alon Strikovsky, VP Professional Services</h2>
         <p>
             Alon brings more than 27 years of experience in the IT industries. In the past years as VP R&amp;D
