--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,52 +1,30 @@
-
 /*
 table of contents:
-  1. embedded fonts
-  2. sass
+  1. includes
+  2. bootstrap sass
   3. helper classes
   4. baseline styles
   5. layout
   6. custom styles
 
 colors:
-#619ee7
-#164b8a
-#4488d5
+  #619ee7
+  #164b8a
+  #4488d5
 */
 
 
-/* 1. embedded fonts
+
+/* 1. includes
 -------------------------------------------------- */
 
 @import "fonts";
-
-
-/* 2. sass
--------------------------------------------------- */
-
-/* variables overrides */
-$text-color: #555;
-$link-color: $text-color;
-$link-hover-color: #4488d5;
-//$headings-color: #002355;
-$headings-color: #619ee7;
-$headings-font-weight: normal;
-$font-size-base: 18px;
-$font-family-base: district_prothin;
-$grid-gutter-width: 26px;
-
-/* custom variables */
-$footerHeight: 200px;
-$topLinksHeight: 40px;
-$tileHeight: 400px;
-$compositeColor: #e6e6e6;
-$shadowColor: $text-color;
-$c123Color: #4488d5;
-$mainGradientTop: #070f22;
-$mainGradientBottom: #1d314e;
-
-/* bootstrap */
+@import "variables";
 @import "bootstrap-sass/lib/bootstrap";
+
+/* partials */
+@import "acknowledgments-ticker";
+
 
 /* overrides */
 .list-inline.pull-right {
@@ -54,7 +32,6 @@ $mainGradientBottom: #1d314e;
     padding-right: 0;
   }
 }
-
 
 /* 3. helper classes
 -------------------------------------------------- */
@@ -69,14 +46,13 @@ $mainGradientBottom: #1d314e;
   overflow: hidden
 }
 
-
 /* 4. baseline styles
 -------------------------------------------------- */
 
 body {
   //@include gradient-vertical(#002355,#3478aa);
   //@include gradient-vertical(#001642,#00467F);
-  @include gradient-vertical($mainGradientTop,$mainGradientBottom);
+  @include gradient-vertical($mainGradientTop, $mainGradientBottom);
   background-color: $mainGradientBottom;
   line-height: 1.5;
 }
@@ -85,21 +61,23 @@ h1 {
   font-size: 140%;
   font-weight: bold;
 }
+
 h2 {
   font-size: 130%;
 }
+
 h3 {
   font-size: 120%;
 }
-h4,h5,h6 {
+
+h4, h5, h6 {
   font-size: 110%;
 }
 
 a {
-  @include transition(color,text-shadow,.25s);
+  @include transition(color, text-shadow, .25s);
   text-decoration: none !important;
 }
-
 
 /* 5. layout
 -------------------------------------------------- */
@@ -109,16 +87,17 @@ html,
 body {
   height: 100%;
 }
+
 #wrap {
   min-height: 100%;
   height: auto;
   margin: 0 auto $footerHeight * -1;
   padding: 0 0 $footerHeight;
 }
+
 #footer {
   height: $footerHeight;
 }
-
 
 /* 6. custom styles
 -------------------------------------------------- */
@@ -156,12 +135,18 @@ body {
 #header {
   padding-bottom: 20px;
   #header-nav {
-    padding-top: 30px;
+    padding: 30px 1em 0;
     a {
       font-weight: normal;
     }
     .logo {
       position: relative;
+      //display: block;
+      //width: 100px;
+      //height: 100px;
+      //background: url('/images/123completed-logo.png') 50% 50% no-repeat;
+      //background-size: contain;
+      //margin-bottom: 1em;
       span {
         height: 50px;
         color: #fff;
@@ -176,40 +161,40 @@ body {
           font-size: 37px;
         }
       }
-/*      &:after,
-      span:before,
-      &:before {
-        content: '';
-        z-index: -1;
-        position: absolute;
-      }
-      &:before {
-        top: -27px;
-        left: 70px;
-        display: block;
-        width: 74px;
-        height: 74px;
-        background-color: #4e72bc;
-        @include opacity(70);
-      }*/
-/*      &:after {
-        top: -10px;
-        left: 70px;
-        display: block;
-        width: 70px;
-        height: 70px;
-        background-color: #415a91;
-        @include opacity(50);
-      }
-      span:before {
-        top: 0;
-        left: 30px;
-        display: block;
-        width: 90px;
-        height: 90px;
-        background-color: #244791;
-        @include opacity(70);
-      }*/
+      /*      &:after,
+            span:before,
+            &:before {
+              content: '';
+              z-index: -1;
+              position: absolute;
+            }
+            &:before {
+              top: -27px;
+              left: 70px;
+              display: block;
+              width: 74px;
+              height: 74px;
+              background-color: #4e72bc;
+              @include opacity(70);
+            }*/
+      /*      &:after {
+              top: -10px;
+              left: 70px;
+              display: block;
+              width: 70px;
+              height: 70px;
+              background-color: #415a91;
+              @include opacity(50);
+            }
+            span:before {
+              top: 0;
+              left: 30px;
+              display: block;
+              width: 90px;
+              height: 90px;
+              background-color: #244791;
+              @include opacity(70);
+            }*/
     }
     nav {
       padding-top: 30px;
@@ -227,6 +212,7 @@ body {
     font-size: 1em;
   }
 }
+
 .services-list {
   line-height: 2.7;
   li {
@@ -242,14 +228,13 @@ body {
   }
 }
 
-
 /* TODO make more specific, so it would apply only to layout boxes */
 #home,
 #main {
   section {
     min-height: $tileHeight;
-    margin-bottom: $grid-gutter-width + 4;
-    padding: $grid-gutter-width + 12;
+    margin-bottom: $grid-gutter-width;
+    padding: $boxPad + 12;
     background-color: $compositeColor;
     //background-color: #008dc6;
     a {
@@ -262,6 +247,7 @@ body {
     }
   }
 }
+
 #home section {
   height: $tileHeight;
   > h1,
@@ -281,8 +267,8 @@ body {
     color: #cccccc;
   }
   [class*="col-"] {
-    margin-top: $grid-gutter-width;
-    height: $footerHeight - $grid-gutter-width * 2;
+    margin-top: $boxPad;
+    height: $footerHeight - $boxPad * 2;
     &:not(:last-child) {
       border-right: 1px solid $mainGradientBottom;
     }
@@ -300,12 +286,14 @@ body {
 }
 
 .services-map {
-  width: 100%;
-  height: 400px;
-  margin: $grid-gutter-width 0;
-  border: 0 none;
-}
+  padding: $boxPad 0 $boxPad * 2;
 
+  iframe {
+    width: 100%;
+    height: 400px;
+    border: 0 none;
+  }
+}
 
 /* animation */
 // TODO resolve animation enter container flow (when the DOM has both containers)
@@ -313,6 +301,7 @@ body {
   //min-height: $tileHeight;
   //position: relative;
 }
+
 .ng-enter, .ng-leave {
   //position: absolute;
   @include transition(all .2s linear 0);
