adding angular carousel for acknowledgments ticker, creating its directive and controller. playing with logos, adding assets folder. beginning separation of scss stylesheets per component. correcting images path in markup references. route for pages restored to only include the page name as param.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,7 +23,7 @@ colors:
 @import "bootstrap-sass/lib/bootstrap";
 
 /* partials */
-@import "acknowledgments-ticker";
+@import "acknowledgments";
 
 
 /* overrides */
