--- a/app/styles/fonts.scss
+++ b/app/styles/fonts.scss
@@ -1,8 +1,3 @@
 @import "fonts/district-thin-pro/stylesheet.css";
 @import "fonts/open-sans/opensans_regular_macroman/stylesheet.css";
-@font-face {
-  font-family: 'lane';
-  src: url('fonts/lane/LANENAR_.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
+@import "fonts/lane/stylesheet.css";
