--- a/app/views/home-template.html
+++ b/app/views/home-template.html
@@ -2,7 +2,7 @@
 
     <div class="row">
         <div class="col-md-8">
-            <section ng-controller="AcknowledgmentsCtrl">
+            <section ng-controller="AcknowledgmentsCtrl" class="acknowledgments-box">
                 <div acknowledgments></div>
             </section>
         </div>
