removed redundant question marks

--- a/app/views/partials/what-we-do.html
+++ b/app/views/partials/what-we-do.html
@@ -1,4 +1,4 @@
-<h1>What we do?</h1>
+<h1>What we do</h1>
 <ul class="services-list list-unstyled">
     <!-- NOTE: tab-indexes 81-90 are reserved for services links -->
     <li>
