--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -7,6 +7,7 @@ $link-color: $text-color;
 $link-hover-color: #4488d5;
 //$headings-color: #002355;
 $headings-color: #619ee7;
+//$headings-font-family: lane;
 $headings-font-weight: normal;
 $font-size-base: 18px;
 $font-family-base: district_prothin;
