ticker is now working! also started parting sass stylesheets into components. introducing font-awesome.

--- a/app/styles/_acknowledgments.scss
+++ b/app/styles/_acknowledgments.scss
@@ -1,6 +1,6 @@
 // TODO encapsulate all partials to prevent the use of !important - use the rule order
 .acknowledgments-box {
-  background-color: #ccc !important;
+  background-color: #d3d3d3 !important;
 
   .acknowledgments-ticker {
 
