--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -18,12 +18,17 @@ colors:
 /* 1. includes
 -------------------------------------------------- */
 
+/* initials */
 @import "fonts";
 @import "variables";
+@import "images";
+/* libs */
 @import "bootstrap-sass/lib/bootstrap";
-
+// TODO test font awesome and utilize it
+@import "../bower_components/font-awesome/scss/font-awesome";
 /* partials */
 @import "acknowledgments";
+@import "staff";
 
 
 /* overrides */
@@ -54,24 +59,27 @@ body {
   //@include gradient-vertical(#001642,#00467F);
   @include gradient-vertical($mainGradientTop, $mainGradientBottom);
   background-color: $mainGradientBottom;
-  line-height: 1.5;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  text-shadow: 1px 1px 0 #fff;
 }
 
 h1 {
-  font-size: 140%;
-  font-weight: bold;
+  font-size: 155%;
+  //font-weight: bold;
 }
 
 h2 {
-  font-size: 130%;
+  font-size: 125%;
 }
 
 h3 {
-  font-size: 120%;
+  font-size: 110%;
 }
 
 h4, h5, h6 {
-  font-size: 110%;
+  font-size: 100%;
 }
 
 a {
@@ -297,6 +305,8 @@ body {
 
 /* animation */
 // TODO resolve animation enter container flow (when the DOM has both containers)
+// TODO uncomment this after preventing these rules from applying on the rn-carousel (it creates a duplication bug)
+/*
 #wrap {
   //min-height: $tileHeight;
   //position: relative;
@@ -322,3 +332,4 @@ body {
 .ng-leave.ng-leave-active {
   @include opacity(0);
 }
+*/
