--- a/app/views/partials/staff.html
+++ b/app/views/partials/staff.html
@@ -1,9 +1,12 @@
+
+<!-- TODO staff member to directive -->
+
 <section class="staff">
 
     <h1>The Staff</h1>
 
     <div class="member">
-        <img class="round-3" src="/images/staff/eyal.png" alt="Eyal Rubin's Portrait" width="80" height="80" />
+        <img class="img-thumbnail" src="/images/staff/eyal.png" alt="Eyal Rubin's Portrait" width="80" height="80" />
         <h2>Eyal Rubin, Founder, CEO</h2>
         <p>
             Eyal Rubin has been the Founder and Chief Executive Officer of 1 2 3 Completed since January 2009.
@@ -20,9 +23,10 @@
             Oracle), Sun Microsystems (acquired by Oracle), Amdocs (NYSE: DOX), Comverse Technologies and many
             others. Eyal earned his Computer Science and Economics Degree in Bar-Ilan University, Israel.
         </p>
-        <ul class="contact-links no-bullets">
+        <ul class="contact-links list-unstyled">
             <li>
-                <a class="icon-email" href="mailto:eyal.rubin@123completed.com" title="E-Mail Eyal Rubin at eyal.rubin@123completed.com"></a>
+                <!--<a class="icon-email" href="mailto:eyal.rubin@123completed.com" title="E-Mail Eyal Rubin at eyal.rubin@123completed.com"></a>-->
+                <a class="fa-stack-exchange" href="mailto:eyal.rubin@123completed.com" title="E-Mail Eyal Rubin at eyal.rubin@123completed.com"></a>
             </li>
             <li>
                 <a class="icon-linkedin" href="http://il.linkedin.com/pub/eyal-rubin/0/165/a27" title="Eyal Rubin's LinkedIn Profile"></a>
@@ -31,7 +35,7 @@
     </div>
 
     <div class="member">
-        <img class="round-3" src="/images/staff/alons.jpg" alt="Alon Strikovsky's Portrait" width="80" height="80" />
+        <img class="img-thumbnail" src="/images/staff/alons.jpg" alt="Alon Strikovsky's Portrait" width="80" height="80" />
         <h2>Alon Strikovsky, VP Professional Services</h2>
         <p>
             Alon brings more than 27 years of experience in the IT industries. In the past years as VP R&amp;D
@@ -47,7 +51,7 @@
             leading R&amp;D teams, worldwide project leading and years of experience in system implementation.
             Alon has BA degree in business Administration from Newport University, California.
         </p>
-        <ul class="contact-links no-bullets">
+        <ul class="contact-links list-unstyled">
             <li>
                 <a class="icon-email" href="mailto:alonst@123completed.com" title="E-Mail Alon Strikovsky at alonst@123completed.com"></a>
             </li>
