styles updated on management (staff) and services pages.

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -30,7 +30,7 @@
             <nav id="main-nav">
                 <ul class="list-inline pull-right">
                     <li>
-                        <a tabindex="11" href="/global-services.html">Global Services</a>
+                        <a tabindex="11" href="/services.html">Global Services</a>
                     </li>
                     <li>
                         <a tabindex="12" href="/training.html">Training</a>
@@ -39,7 +39,7 @@
                         <a tabindex="13" href="/business-relations.html">Business Relations</a>
                     </li>
                     <li>
-                        <a tabindex="14" href="/staff.html">Staff</a>
+                        <a tabindex="14" href="/staff.html">Management</a>
                     </li>
                     <li>
                         <a tabindex="15" href="/contact-us.html">Contact</a>
