--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -29,7 +29,7 @@ colors:
 /* partials */
 @import "acknowledgments";
 @import "staff";
-
+@import "services";
 
 /* overrides */
 .list-inline.pull-right {
@@ -237,7 +237,6 @@ body {
 }
 
 /* TODO make more specific, so it would apply only to layout boxes */
-#home,
 #main {
   section {
     min-height: $tileHeight;
@@ -249,18 +248,19 @@ body {
       font-weight: bold;
       text-shadow: 1px 1px 0 #ffffff;
     }
-    > h1,
-    > section > h1 {
-      margin-top: 0;
+    > h1 {
+      margin: .2em 0 1.5em;
+      padding-bottom: .5em;
+      border-bottom: 1px solid #ffffff;
     }
   }
 }
 
 #home section {
   height: $tileHeight;
-  > h1,
-  > section > h1 {
-    margin-top: -10px;
+  > h1 {
+    margin: -10px 0 0;
+    border-bottom: 0 none;
   }
 }
 
@@ -293,19 +293,9 @@ body {
   }
 }
 
-.services-map {
-  padding: $boxPad 0 $boxPad * 2;
-
-  iframe {
-    width: 100%;
-    height: 400px;
-    border: 0 none;
-  }
-}
-
 /* animation */
 // TODO resolve animation enter container flow (when the DOM has both containers)
-// TODO uncomment this after preventing these rules from applying on the rn-carousel (it creates a duplication bug)
+// TODO comment this in after preventing these rules from applying on the rn-carousel (it creates a duplication bug)
 /*
 #wrap {
   //min-height: $tileHeight;
