--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,7 +1,7 @@
 <div class="container">
 
     <!-- NOTE: tab-indexes 1-10 are reserved for first-level hooks -->
-    <a tabindex="1" title="to navigation" href="#main-nav" class="jump-to-nav hidden">Jump To Navigation</a>
+    <a tabindex="1" title="to navigation" href="#main-nav" ng-hide="true">Jump To Navigation</a>
 
 
     <div id="top-links" class="row">
