--- a/app/styles/_acknowledgments.scss
+++ b/app/styles/_acknowledgments.scss
@@ -11,15 +11,17 @@
       text-shadow: 1px 1px 0 #fff;
     }
     .quote {
+      padding: 0;
       border: 0 none;
-      font-size: 1.4em;
+      //font-size: 1.4em;
+      font-size: .9em;
       line-height: 1.7;
       font-family: lane, sans-serif;
       letter-spacing: .04em;
     }
     .ref {
       text-align: right;
-      font-size: .9em;
+      font-size: .8em;
     }
   }
 }
