--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -1,4 +1,9 @@
-
+/*
+colors:
+  #619ee7
+  #164b8a
+  #4488d5
+*/
 
 /* custom variables
 -------------------------------------------------- */
@@ -19,10 +24,7 @@ $text-color: #555;
 $link-color: $text-color;
 $link-hover-color: #4488d5;
 //$headings-color: #002355;
-$headings-color: #619ee7;
-
-
-//$headings-font-family: lane;
+$headings-color: #4488d5;
 $headings-font-weight: normal;
 $font-size-base: 18px;
 $font-family-base: district_prothin;
