--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -17,22 +17,4 @@ $c123Color: #4488d5;
 $mainGradientTop: #070f22;
 $mainGradientBottom: #1d314e;
 
-/* bootstrap sass overrides
--------------------------------------------------- */
-
-$text-color: #555;
-$link-color: $text-color;
-$link-hover-color: #4488d5;
-//$headings-color: #002355;
-$headings-color: #4488d5;
-$headings-font-weight: normal;
-$font-size-base: 18px;
-$font-family-base: district_prothin;
-$line-height-base: 1.5;
-
-$grid-gutter-width: 28px;
-
-
-/* custom again */
-
-$boxPad: $grid-gutter-width * 1.1;
+$boxPad: 32px;
