--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,313 +1,24 @@
-/*
-table of contents:
-  1. includes
-  2. bootstrap sass
-  3. helper classes
-  4. baseline styles
-  5. layout
-  6. custom styles
 
-*/
-
-
-
-/* 1. includes
--------------------------------------------------- */
-
-/* initials */
+/* common */
 @import "fonts";
 @import "variables";
 @import "images";
+@import "colors";
+/* sass definitions overrides */
+@import "bootstrap-sass-override";
 /* libs */
 @import "bootstrap-sass/lib/bootstrap";
-// TODO test font awesome and utilize it
-@import "../bower_components/font-awesome/scss/font-awesome";
+@import "../bower_components/font-awesome/scss/font-awesome"; // TODO test font awesome and utilize it
+/* baseline styles */
+@import "baseline";
 /* partials */
 @import "layout";
+@import "header";
+@import "footer";
 @import "homepage";
+@import "banner";
 @import "acknowledgments";
 @import "staff";
 @import "services";
-
-/* overrides */
-.list-inline.pull-right {
-  > li:last-child {
-    padding-right: 0;
-  }
-}
-
-/* 4. baseline styles
--------------------------------------------------- */
-
-body {
-  //@include gradient-vertical(#002355,#3478aa);
-  //@include gradient-vertical(#001642,#00467F);
-  @include gradient-vertical($mainGradientTop, $mainGradientBottom);
-  background-color: $mainGradientBottom;
-}
-
-h1,h2,h3,h4,h5,h6 {
-  text-shadow: 1px 1px 0 #fff;
-}
-
-h1 {
-  font-size: 155%;
-  //font-weight: bold;
-}
-
-h2 {
-  font-size: 125%;
-}
-
-h3 {
-  font-size: 110%;
-}
-
-h4, h5, h6 {
-  font-size: 100%;
-}
-
-a {
-  @include transition(color, text-shadow, .25s);
-  text-decoration: none !important;
-}
-
-
-/* 6. custom styles
--------------------------------------------------- */
-
-#wrap:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: $topLinksHeight;
-  border-bottom: 1px solid $mainGradientBottom;
-}
-
-#top-links {
-  height: $topLinksHeight;
-  line-height: $topLinksHeight;
-  a {
-    color: #fff;
-  }
-}
-
-#header,
-#footer {
-  a {
-    color: $compositeColor;
-    font-weight: bold;
-    &:hover {
-      color: white;
-      text-shadow: 0 0 4px #ddd;
-    }
-  }
-}
-
-#header {
-  padding-bottom: 20px;
-  #header-nav {
-    padding: 30px 1em 0;
-    a {
-      font-weight: normal;
-    }
-    .logo {
-      position: relative;
-      //display: block;
-      //width: 100px;
-      //height: 100px;
-      //background: url('/images/123completed-logo.png') 50% 50% no-repeat;
-      //background-size: contain;
-      //margin-bottom: 1em;
-      span {
-        height: 50px;
-        color: #fff;
-        &.one {
-          line-height: 50px;
-          font-size: 26px;
-          font-weight: bold;
-        }
-        &.completed {
-          line-height: 44px;
-          font-family: lane;
-          font-size: 37px;
-        }
-      }
-      /*      &:after,
-            span:before,
-            &:before {
-              content: '';
-              z-index: -1;
-              position: absolute;
-            }
-            &:before {
-              top: -27px;
-              left: 70px;
-              display: block;
-              width: 74px;
-              height: 74px;
-              background-color: #4e72bc;
-              @include opacity(70);
-            }*/
-      /*      &:after {
-              top: -10px;
-              left: 70px;
-              display: block;
-              width: 70px;
-              height: 70px;
-              background-color: #415a91;
-              @include opacity(50);
-            }
-            span:before {
-              top: 0;
-              left: 30px;
-              display: block;
-              width: 90px;
-              height: 90px;
-              background-color: #244791;
-              @include opacity(70);
-            }*/
-    }
-    nav {
-      padding-top: 30px;
-      li {
-        padding-right: 0;
-        padding-left: 2em;
-        font-size: 1.3em;
-      }
-    }
-  }
-}
-
-
-
-/* TODO make more specific, so it would apply only to layout boxes */
-#main {
-  section {
-    min-height: $tileHeight;
-    margin-bottom: $grid-gutter-width;
-    padding: $boxPad + 12;
-    background-color: $compositeColor;
-    //background-color: #008dc6;
-    a {
-      font-weight: bold;
-      text-shadow: 1px 1px 0 #ffffff;
-    }
-    > h1 {
-      margin: .2em 0 1.5em;
-      padding-bottom: .5em;
-      border-bottom: 1px solid #ffffff;
-    }
-  }
-}
-
-#home section {
-  height: $tileHeight;
-  > h1 {
-    margin: -10px 0 0;
-    border-bottom: 0 none; // TODO create conditional classname for non-home pages to avoid negative overrides like this one
-  }
-}
-
-#footer {
-  position: relative;
-  background-color: $mainGradientTop;
-  color: #cccccc;
-  .row {
-    background-color: $mainGradientTop;
-  }
-  a {
-    color: #cccccc;
-  }
-  [class*="col-"] {
-    margin-top: $boxPad;
-    height: $footerHeight - $boxPad * 2;
-    &:not(:last-child) {
-      border-right: 1px solid $mainGradientBottom;
-    }
-  }
-  .website-meta {
-    img {
-      padding: 0 4px 0 0;
-    }
-  }
-  .copyright {
-    position: absolute;
-    bottom: 0;
-    right: $grid-gutter-width / 2;
-  }
-  .links-list {
-    li {
-      line-height: 2;
-    }
-  }
-}
-
-.banner {
-  position: relative;
-  padding: 0 !important;
-
-  .photo,
-  .text {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
-
-  .photo {
-    height: 100%;
-    background: url('/images/stock-photos/can-stock-photo_csp4071433.jpg') 50% 50% no-repeat;
-    //background: url('/images/stock-photos/can-stock-photo_csp0167406.jpg') 50% 50% no-repeat;
-    background-size: cover;
-    @include opacity(.8);
-  }
-  .text {
-    top: 50%;
-    height: 30%;
-    padding: 0 2em;
-    background-color: $c123Color;
-    color: #fff;
-    font: $font-size-large * 1.4 lane;
-    line-height: 4;
-    text-shadow: -1px -1px 0 $mainGradientBottom;
-    @include opacity(.8);
-    //@include gradient-radial($mainGradientBottom, transparent);
-  }
-}
-
-
-
-/* animation */
-// TODO resolve animation enter container flow (when the DOM has both containers)
-// TODO comment this in after preventing these rules from applying on the rn-carousel (it creates a duplication bug)
-/*
-#wrap {
-  //min-height: $tileHeight;
-  //position: relative;
-}
-
-.ng-enter, .ng-leave {
-  //position: absolute;
-  @include transition(all .2s linear 0);
-}
-
-.ng-enter {
-  @include opacity(0);
-}
-
-.ng-enter.ng-enter-active {
-  @include opacity(100);
-}
-
-.ng-leave {
-  @include opacity(100);
-}
-
-.ng-leave.ng-leave-active {
-  @include opacity(0);
-}
-*/
+/* angularjs animation */
+@import "animation";
