--- a/app/styles/_services.scss
+++ b/app/styles/_services.scss
@@ -1,7 +1,7 @@
 .services {
 
   .global-services-map {
-    padding-bottom: $boxPad * 2;
+    padding: $boxPad 0 0;
 
     iframe {
       width: 100%;
